fix: Fixed problem with the filter button of property values in the details flyout for `Modules/Integrity monitoring/Inventory` and `Modules/Vulnerabilities/Inventory`   - Styles:     - Use position:absolute to ignore the element flow and move others       elements     - Added a background color (light and dark theme) to the button to contrast with the text       when the button is overlapping to the text.   - Behavior:     - Fixed the filter button wasn't displayed for any properties

--- a/public/styles/inventory.scss
+++ b/public/styles/inventory.scss
@@ -35,6 +35,7 @@
     margin-left: 36px;
     float: left;
     white-space: break-spaces;
+    position: relative;
   }
 
   .buttonAddFilter {
@@ -53,7 +54,9 @@
   }
 
   .detail-tooltip {
-    float: right;
+    position: absolute;
+    right: 36px;
+    background-color: #fcfdfe;
   }
 
   .application .euiAccordion,
